@@ -1,3 +1,7 @@
+2009-03-09  Tomas Hurka  <tomas.hurka@sun.com>
+
+	* Makefile.am: Updated visualvm to version 1.1.1.
+
 2009-03-09  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.hpp
